fixing dark mode collapsible button

--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -11,5 +11,15 @@ $navbar-bg: #212121;
 // Code blocks
 $code-block-bg-alpha: -.8;
 
-// Button customs
-$btn-link-hover-color: green;
+/* ------- customize primary button color -------- */   
+.btn {
+  background-color: black;
+  color: white;
+  border-color: white;
+  transition: all .7s;
+}
+.btn:hover {
+  color: #77b0ed;
+  background-color: #181818;
+  border-color: white;
+}  
