--- a/theme-light.scss
+++ b/theme-light.scss
@@ -10,3 +10,14 @@ $body-color: black;
 $code-block-bg-alpha: -.8;
 
 /* ------- customize primary button color -------- */   
+.btn {
+  background-color: white;
+  color: black;
+  border-color: black;
+  transition: all .7s;
+}
+.btn:hover {
+  color: #77b0ed;
+  background-color: #fff;
+  border-color: black;
+}  
